backend/production/monospaced-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monospaced-backend
  namespace: monospaced
spec:
  selector:
    app: monospaced-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
