backend/production/monospaced-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monospaced-backend-ingress
  namespace: monospaced
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.rohitpotato.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monospaced-backend
                port:
                  number: 5001
  tls:
    - hosts:
        - api.rohitpotato.xyz
      secretName: monospaced-backend-tls
